Fixing the display bug of top and bottom white bars on mobile devices with irregular-shaped screens

--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,21 @@
   box-sizing: border-box;
 }
 
+html {
+  width: 100%;
+  height: 100%;
+  background: var(--bg-gradient);
+}
+
 body {
+  width: 100%;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: var(--bg-gradient);
 }
 
 code {
